@@ -13,32 +13,49 @@ description = """
 All of the application specific code that makes shuffleboard run.
 """.trimMargin()
 
+repositories {
+    maven {
+        setUrl("https://dl.bintray.com/samcarlberg/maven-artifacts/")
+    }
+}
+
 dependencies {
     compile(project(":api"))
     compile(project(path = ":plugins:base"))
     compile(project(path = ":plugins:cameraserver"))
     compile(project(path = ":plugins:networktables"))
-    compile(group = "com.google.code.gson", name = "gson", version = "2.8.2")
+    compile(project(path = ":plugins:powerup"))
     compile(group = "de.huxhorn.lilith", name = "de.huxhorn.lilith.3rdparty.junique", version = "1.0.4")
-
-    runtime(group = "edu.wpi.first.ntcore", name = "ntcore-jni", version = "3.1.7-20170808143930-12-gccfeab5", classifier = "all")
+    compile(group = "com.github.samcarlberg", name = "update-checker", version = "+")
+    compile(group = "com.github.zafarkhaja", name = "java-semver", version = "0.9.0")
+    compile(group = "org.apache.commons", name = "commons-csv", version = "1.5")
+    testCompile(project("test_plugins"))
 }
 
 val theMainClassName = "edu.wpi.first.shuffleboard.app.Shuffleboard"
 
 application {
     mainClassName = theMainClassName
+    applicationDefaultJvmArgs = listOf("-Xverify:none", "-Dprism.order=d3d,es2,sw")
 }
 
 tasks.withType<Jar> {
-    getWPILibVersion()?.let { version = it }
     manifest {
-        attributes(mapOf(
-            "Implementation-Version" to getWPILibVersion(),
-            "Main-Class" to theMainClassName
-        ).filterValues { it != null })
+        attributes["Main-Class"] = theMainClassName
     }
 }
+
+/**
+ * Make tests get the most recent version of the test plugin jar.
+ */
+tasks.withType<Test> {
+    dependsOn(project("test_plugins").tasks["jar"])
+}
+
+/**
+ * Lets tests use the output of the test_plugins build.
+ */
+java.sourceSets["test"].resources.srcDirs += File(project("test_plugins").buildDir, "libs")
 
 /**
  * @return [edu.wpi.first.wpilib.versioning.WPILibVersioningPluginExtension.version] value or null
